Color banding present in Workbench render but not in viewport. #59943

Closed
opened 2018-12-29 04:12:24 +01:00 by Forest Katsch · 6 comments

System Information

Operating system:
Ubuntu 18.10
Graphics card:
nVidia GTX 1080Ti

Computer 2:
Operating System:
Arch Linux
Graphics card:
nVidia GeForce 940MX

This issue is present on both computers.

Blender Version
Broken:
v2.80 7c438e5366 (latest as of December 28, 2018)

Short description of error
Banding (color depth clipping?) present in Workbench render but not in viewport.

Viewport screenshot:

viewport.png

Render:

render.png
Render screenshot:

render-view.png

Exact steps for others to reproduce the error
ColorBandingWorkbenchReproduction1.blend

  1. Open the attached blend file.
  2. Press F12.

There is clear banding in the render result but not in the viewport.

**System Information** Operating system: Ubuntu 18.10 Graphics card: nVidia GTX 1080Ti Computer 2: Operating System: Arch Linux Graphics card: nVidia GeForce 940MX This issue is present on both computers. **Blender Version** Broken: v2.80 7c438e5366b22eeace2f2e9872e26519c5d5eb01 (latest as of December 28, 2018) **Short description of error** Banding (color depth clipping?) present in Workbench render but not in viewport. Viewport screenshot: ![viewport.png](https://archive.blender.org/developer/F6102690/viewport.png) Render: ![render.png](https://archive.blender.org/developer/F6102694/render.png) Render screenshot: ![render-view.png](https://archive.blender.org/developer/F6102692/render-view.png) **Exact steps for others to reproduce the error** [ColorBandingWorkbenchReproduction1.blend](https://archive.blender.org/developer/F6102851/ColorBandingWorkbenchReproduction1.blend) 1. Open the attached blend file. 2. Press F12. There is clear banding in the render result but not in the viewport.
Author

Added subscriber: @forestkatsch

Added subscriber: @forestkatsch
Author

Just want to add that Viewport Render (3D View -> View -> Viewport Render) does not exhibit the same banding.

Just want to add that Viewport Render (3D View -> View -> Viewport Render) does not exhibit the same banding.

Added subscriber: @ixd

Added subscriber: @ixd

Can confirm (Win 10, Blender a4e4d9f0ab).

Consider the following scene:
image.png

Dither option don't have any effect for Workbench Render but does help in Viewport Render. It looks like the underlying buffer in WB render is 8-bit.
dither_comp.png

Workbench render. Exported 32-bit .exr shows banding too.
banding3.png

Viewport render:
banding5.png

Similar setup in Cycles@5000 samples for comparison:
banding4.png

Can confirm (Win 10, Blender a4e4d9f0ab89). Consider the following scene: ![image.png](https://archive.blender.org/developer/F6104896/image.png) Dither option don't have any effect for Workbench Render but does help in Viewport Render. It looks like the underlying buffer in WB render is 8-bit. ![dither_comp.png](https://archive.blender.org/developer/F6104946/dither_comp.png) Workbench render. Exported 32-bit .exr shows banding too. ![banding3.png](https://archive.blender.org/developer/F6104781/banding3.png) Viewport render: ![banding5.png](https://archive.blender.org/developer/F6105206/banding5.png) Similar setup in Cycles@5000 samples for comparison: ![banding4.png](https://archive.blender.org/developer/F6105090/banding4.png)
Clément Foucault was assigned by Sebastian Parborg 2018-12-29 12:08:03 +01:00

This issue was referenced by 99fe774298

This issue was referenced by 99fe7742987202035031727d9cd181d574d7e810

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59943
No description provided.