Fix T59943 Color banding present in Workbench render but not in viewport

I don't really like forcing RGBA16F for Albedo render but that's ok since
the texture is shared with the effect_fb.